fix tile spacing

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -2,45 +2,50 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* justify-content: space-around; */
+    flex: 1 0 100%;
 }
 
 .vertical-tile {
-    max-width: 25%;
-    min-width: 320px;
-    /* max-height: 200px; */
-    /* border: 1px solid goldenrod; */
-    /* margin: 1%; */
-    margin: 20px;
-    /* margin-bottom: 5px; */
+    border: 1px solid goldenrod;
+    flex: 1 1 320px 180px;
+    list-style: none;
+    margin: 10px;
 }
 
 #vert-tile-title {
     font-weight: 600;
+    max-width: 240px;
 }
 
 #vid-centerer {
-    border: 1px blue solid;
+    /* border: 1px blue solid; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
     width: 100%;
-    height: 240px;
-    /* margin: 5px; */
+
 }
 
 .tile-vid {
-    border: 1px red solid;
     width: 100%;
-    max-height: 200px;
     align-self: center;
     background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-height: 300px;
 }
+
+
+
+
+
+
+
+
+
+
 
 .vertical-tile h4{
     margin: 5px;
@@ -52,7 +57,7 @@
 }
 
 #tile-with-pic {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     display: flex;
     align-items: center;
 }
